# pipes-progress

./: LICENCE  README.md  pipes-progress.cabal
source/Pipes/: Buffer.hs  Progress.hs  Termination.hs
