name:                pipes-progress
version:             0.1.0.0
synopsis:            Provides primitives for monitoring the progress of streaming computations (compatible with Haskell Pipes).
homepage:            https://github.com/jonathanknowles/pipes-progress
license:             BSD3
license-file:        LICENCE
author:              Jonathan Knowles
copyright:           Jonathan Knowles
maintainer:          mail@jonathanknowles.net
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
    exposed-modules:
        Pipes.Buffer
        Pipes.Progress
        Pipes.Termination
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.8 && <4.9,
        async,
        foldl,
        lifted-async,
        monad-control,
        mtl,
        pipes,
        pipes-concurrency,
        pipes-extras,
        pipes-safe,
        time
    hs-source-dirs:
        source
    default-language:
        Haskell2010
    ghc-options:
        -O3
        -threaded
        -funbox-strict-fields
        -rtsopts
        -with-rtsopts=-N
