name:                pipes-progress
version:             0.1.0.0
synopsis:            Provides primitives for monitoring the progress of streaming computations (compatible with Haskell Pipes).
homepage:            https://github.com/jonathanknowles/pipes-progress
license:             BSD3
license-file:        LICENCE
author:              Jonathan Knowles
copyright:           Jonathan Knowles
maintainer:          mail@jonathanknowles.net
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
    exposed-modules:
        Pipes.Buffer
        Pipes.Progress
        Pipes.Termination
    build-depends:
        base               >= 4.8     && < 4.9,
        async              >= 2.1.0   && < 3.0,
        foldl              >= 1.2.1   && < 2.0,
        lifted-async       >= 0.9.0   && < 1.0,
        monad-control      >= 1.0.1.0 && < 2.0,
        mtl                >= 2.2.1   && < 3.0,
        pipes              >= 4.1.9   && < 5.0,
        pipes-concurrency  >= 2.0.6   && < 3.0,
        pipes-extras       >= 1.0.5   && < 2.0,
        pipes-safe         >= 2.2.4   && < 3.0,
        time               >= 1.5.0.1 && < 2.0
    hs-source-dirs:
        source
    default-language:
        Haskell2010
    ghc-options:
        -O3
        -threaded
        -funbox-strict-fields
        -rtsopts
        -with-rtsopts=-N
