cabal-version:  3.0
name:           pipes-progress
version:        0.1.0.0
homepage:       https://github.com/jonathanknowles/pipes-progress
license:        BSD-3-Clause
license-file:   LICENCE
author:         Jonathan Knowles
copyright:      Jonathan Knowles
maintainer:     mail@jonathanknowles.net
category:       Data
build-type:     Simple
synopsis:       Primitives for monitoring progress of streams.
description:
  Provides primitives for monitoring the progress of streaming computations
  (compatible with Haskell Pipes).

library
    exposed-modules:
        Pipes.Buffer
        Pipes.Progress
        Pipes.Termination
    build-depends:
      , async              >= 2.1.0
      , base               >= 4.8 && < 4.18
      , foldl              >= 1.2.1
      , lifted-async       >= 0.9.0
      , monad-control      >= 1.0.1.0
      , mtl                >= 2.2.1
      , pipes              >= 4.1.9
      , pipes-concurrency  >= 2.0.6
      , pipes-extras       >= 1.0.5
      , pipes-safe         >= 2.2.4
      , time               >= 1.5.0.1
    hs-source-dirs:
        source
    default-language:
        Haskell2010
    ghc-options:
        -funbox-strict-fields

source-repository head
    type: git
    location: https://github.com/jonathanknowles/pipes-progress
